--- a/finalProject/src/main/webapp/WEB-INF/web.xml
+++ b/finalProject/src/main/webapp/WEB-INF/web.xml
@@ -49,6 +49,22 @@
 		<url-pattern>*.me</url-pattern>
 	</servlet-mapping>
 	
+	<!-- memberServlet -->
+	<servlet>
+		<servlet-name>usedServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/used-context.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>usedServlet</servlet-name>
+		<url-pattern>*.ud</url-pattern>
+	</servlet-mapping>
+	
 	
 	<!-- 공용 에러페이지 등록 -->
 	<error-page>
