--- a/finalProject/src/main/webapp/WEB-INF/web.xml
+++ b/finalProject/src/main/webapp/WEB-INF/web.xml
@@ -65,7 +65,21 @@
 		<url-pattern>*.ud</url-pattern>
 	</servlet-mapping>
 	
-	
+	<!-- pushServlet -->
+	<servlet>
+		<servlet-name>pushServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/push-context.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>pushServlet</servlet-name>
+		<url-pattern>*.pu</url-pattern>
+	</servlet-mapping>
 	<!-- 공용 에러페이지 등록 -->
 	<error-page>
 		<exception-type>java.lang.Exception</exception-type>
