--- a/finalProject/src/main/webapp/WEB-INF/web.xml
+++ b/finalProject/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,7 @@
 		<url-pattern>*.me</url-pattern>
 	</servlet-mapping>
 	
-	<!-- memberServlet -->
+	<!-- usedServlet -->
 	<servlet>
 		<servlet-name>usedServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -63,6 +63,22 @@
 	<servlet-mapping>
 		<servlet-name>usedServlet</servlet-name>
 		<url-pattern>*.ud</url-pattern>
+	</servlet-mapping>
+
+	<!-- gesiServlet(일반게시판) -->
+	<servlet>
+		<servlet-name>gesipanServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/gesipan-context.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>gesipanServlet</servlet-name>
+		<url-pattern>*.ge</url-pattern>
 	</servlet-mapping>
 	
 	
