--- a/finalProject/src/main/webapp/WEB-INF/web.xml
+++ b/finalProject/src/main/webapp/WEB-INF/web.xml
@@ -64,7 +64,7 @@
 		<url-pattern>*.bo</url-pattern>
 	</servlet-mapping>
 		
-	<!-- memberServlet -->
+	<!-- usedServlet -->
 	<servlet>
 		<servlet-name>usedServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -79,6 +79,22 @@
 		<servlet-name>usedServlet</servlet-name>
 		<url-pattern>*.ud</url-pattern>
 	</servlet-mapping>
+	
+	<!-- payServlet -->
+	<servlet>
+		<servlet-name>payServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/pay-context.xml</param-value>
+		</init-param>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>payServlet</servlet-name>
+		<url-pattern>*.py</url-pattern>
+	</servlet-mapping>
+	
 	
 	
 	<!-- 공용 에러페이지 등록 -->
