중고 게시판 틀 완성(경매 게시판 베이스로 수정)

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\KimHyunWoo\\Documents\\evening\\finalProject","type":"PROJECT","hints":{"PROJECT_NAME":"finalProject"}},"com.kh:evening:1.0.0"],[{"location":"C:\\Users\\KimHyunWoo\\.m2\\repository\\org\\mybatis\\mybatis\\3.5.2\\mybatis-3.5.2.jar","type":"JAR","hints":{}},"org.mybatis.mybatis:org.mybatis.mybatis:3.5.2"]]
