--- a/finalProject/src/main/webapp/WEB-INF/web.xml
+++ b/finalProject/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
@@ -47,6 +47,23 @@
 	<servlet-mapping>
 		<servlet-name>memberServlet</servlet-name>
 		<url-pattern>*.me</url-pattern>
+	</servlet-mapping>
+	<!-- 수정 -->
+	<!-- chattingServlet -->
+	<servlet>
+		<servlet-name>chattingServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/chattingServlet-context.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+		<async-supported>true</async-supported>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>chattingServlet</servlet-name>
+		<url-pattern>*.ch</url-pattern>
 	</servlet-mapping>
 	
 	<!-- memberServlet -->
