--- a/finalProject/pom.xml
+++ b/finalProject/pom.xml
@@ -3,28 +3,33 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.kh</groupId>
-	<artifactId>evening</artifactId>
-	<name>finalProject</name>
+	<artifactId>spring</artifactId>
+	<name>1_Spring</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>1.8</java-version>
-		<org.springframework-version>5.2.0.RELEASE</org.springframework-version>
+		<org.springframework-version>5.1.9.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 	
+	<!-- repositories : 사설 저장소 설정 -->
 	<repositories>
 		<repository>
-			<id>Datanucleus</id>
+			<id>Datanuleus</id>
 			<url>http://www.datanucleus.org/downloads/maven2/</url>
 		</repository>
+	
 		<repository>
 			<id>Central</id>
 			<url>https://repo1.maven.org/maven2/</url>
+		
 		</repository>
-	</repositories>
 	
+	
+	</repositories>
+		
 	
 	<dependencies>
 		<!-- Spring -->
@@ -128,97 +133,116 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> 
 		
-		<!-- Database 오라클 사용을 위한 라이브러리 -->
+		<!--Database 오라클 사용을 위한 라이브러리  -->
 		<!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
-		<dependency>
-			<groupId>oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0.3</version>
-		</dependency>
+	<dependency>
+    	<groupId>oracle</groupId>
+    		<artifactId>ojdbc6</artifactId>
+    			<version>11.2.0.3</version>
+	</dependency>
 		
-		<!-- MyBatis 라이브러리 -->  
+	<!-- MyBatis 라이브러리  -->	
+		
 		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
-		<dependency>
-		    <groupId>org.mybatis</groupId>
-		    <artifactId>mybatis</artifactId>
-		    <version>3.5.2</version>
-		</dependency>
+	<dependency>
+    	<groupId>org.mybatis</groupId>
+    		<artifactId>mybatis</artifactId>
+    			<version>3.5.2</version>
+	</dependency>	
 		
-		<!-- Spring에서 MyBatis를 사용하기 위한 라이브러리? -->
+		<!-- Spring에서 MyBatis를 사용하기 위한 라이브러리  -->
 		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
-		<dependency>
-		    <groupId>org.mybatis</groupId>
-		    <artifactId>mybatis-spring</artifactId>
-		    <version>1.3.2</version>
-		</dependency>
+	<dependency>
+    	<groupId>org.mybatis</groupId>
+    		<artifactId>mybatis-spring</artifactId>
+    			<version>1.3.2</version>
+	</dependency>
 		
-		<!-- Spring Database 기능을 사용하기 위한 라이브러리 -->
+		<!--Spring Database 기능을 사용하기 위한 라이브러리   -->
+		
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
-		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-jdbc</artifactId>
-		    <!-- <version>5.2.0.RELEASE</version> -->
-		    <version>${org.springframework-version}</version>
-		</dependency>
-		
-		<!-- 커넥션 풀 기능을 사용하기 위한 라이브러리 -->
-		<dependency>
-			<groupId>commons-dbcp</groupId>
+	<dependency>
+    	<groupId>org.springframework</groupId>
+    		<artifactId>spring-jdbc</artifactId>
+   				 <!-- <version>5.2.0.RELEASE</version> -->
+   				 <version>${org.springframework-version}</version>
+	</dependency>
+	
+	<!-- 커넥션 풀 기능을 사용하기 위한 라이브러리 -->
+	<dependency>
+		<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
-			<version>1.4</version>
-		</dependency>
+				<version>1.4</version>
+	</dependency>
 		
-		<!-- 2. 스프링 시큐리티 모듈 추가 -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
+	<!-- 2. 스프링 시큐리티 모듈 추가  -->	
+	<dependency>
+		<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>5.2.0.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
+				<version>5.2.0.RELEASE</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>5.2.0.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
+				<version>5.2.0.RELEASE</version>
+	</dependency>	
+	
+	<dependency>
+		<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>5.2.0.RELEASE</version>
-		</dependency>
+				<version>5.2.0.RELEASE</version>
+	</dependency>
 		
-		<!-- 3. 파일 업로드 관련 라이브러리 -->
-		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.3</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.6</version>
-		</dependency>
 		
-		<!-- json -->
-		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1.1</version>
-		</dependency>
+	<!-- 3. 파일 업로드 관련 라이브러리 -->	
+	<dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3.3</version>
+	</dependency>
 		
-		<!-- gson -->
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.5</version>
-		</dependency>
-		
-		<!-- HikariCP 커넥션풀 -->        
-		<dependency>
-	        <groupId>com.zaxxer</groupId>
-	        <artifactId>HikariCP</artifactId>
-	        <version>3.4.1</version>    
-	    </dependency>
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.6</version>
+	</dependency>	
+	
+	<!-- JSON관련 라이브러리 -->
+	<dependency>
+		<groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>1.1.1</version>	
+	</dependency>
+	
+	<!-- GSON 라이브러리 -->
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.5</version>
+	
+	</dependency>
+	
+	<!-- log4jdbc-remix 라이브러리 -->
+	<dependency>
+		<groupId>org.lazyluke</groupId>
+		<artifactId>log4jdbc-remix</artifactId>
+		<version>0.2.7</version>
+	</dependency>
+	
+	<!-- aop 처리 -->
+	<dependency>
+		<groupId>org.aspectj</groupId>
+		<artifactId>aspectjweaver</artifactId>
+		<version>${org.aspectj-version}</version>
+    </dependency>
+	
+	
+	
+	
+		       
 	</dependencies>
     <build>
         <plugins>
