회원등급 이미지 추가/관리자 회원관리 작업중/web.xml servlet매핑 추가

--- a/finalProject/src/main/webapp/WEB-INF/web.xml
+++ b/finalProject/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,10 @@
 		<servlet-name>memberServlet</servlet-name>
 		<url-pattern>*.me</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>memberServlet</servlet-name>
+		<url-pattern>*.ad</url-pattern>
+	</servlet-mapping>
 	
 	<!-- boardServlet -->
 	<servlet>
