로그인 오류나는데 왜...

--- a/finalProject/src/main/webapp/WEB-INF/web.xml
+++ b/finalProject/src/main/webapp/WEB-INF/web.xml
@@ -80,8 +80,9 @@
 	
 	<servlet-mapping>
 		<servlet-name>messageServlet</servlet-name>
-		<url-pattern>*.ms</url-pattern>
+		<url-pattern>*.sr</url-pattern>
 	</servlet-mapping>	
+		
 	<!-- usedServlet -->
 	<servlet>
 		<servlet-name>usedServlet</servlet-name>
